--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thetaframe-vite",
   "version": "1.0.0",
-  "type": "module",           
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
